# fiis-pipeline

./: .gitignore  LICENSE  README.html  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  teste.ipynb
fiiscraper/: __init__.py  aws_uploader.py  logger_config.py  scraper.py
fiiscraper/models/: __init__.py  fii.py
infra/: fii-data-infra.tfplan  main.tf  terraform.tfstate  terraform.tfstate.backup
lambda_ingestion/: lambda_handler.py
scripts/: build_lambda_package.ps1
tests/: test_scraper.py
tests/cassettes/: test_buscar_indicadores_dia_com_sucesso.yaml  test_buscar_indicadores_dia_com_ticker_invalido.yaml  test_listar_todos_fiis_retorna_lista_de_objetos_fii.yaml
